<resources>
    <string name="app_name">MMD_v1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="atr07">Atr07</string>
    <string name="next_fragment">Next Fragment</string>
    <string name="close_app">Close App</string>
    <string name="accounts_fragment">Accounts Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="nguoiDung">User</string>
    <string name="department">Department</string>
    <string name="thietBi">Device</string>
    <string name="vatTu">Accesory</string>
    <string name="kiemKe">Inventory</string>
    <string name="thongBao">Notification</string>
    <string name="thongKe">Inventory</string>
    <string name="baoHong">"Report "</string>
    <string name="Qrcode">Qrcode</string>
    <string name="scanCode">Scan</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="fullname">Fullname</string>
    <string name="inputfullname">Fill fullname</string>
    <string name="email">Email</string>
    <string name="coomfirm">Comfirm Password</string>
    <string name="fillcomfirm">"Fill comfirm "</string>
    <string name="sdt">SDT</string>
    <string name="role">Role</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="forget_pass">Forget Password</string>
    <string name="errorinfo">Error</string>
    <string name="unique_id">Id</string>
    <string name="model">Model</string>
    <string name="serial">Serial</string>
    <string name="tinhTrang">Status</string>
    <string name="khoaPhong">Department</string>
    <string name="nhanVien">Employee</string>
    <string name="phongGiaiPhauBenhTeBao">Phong Giai Phau Benh Te Bao</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="create_at">Create at</string>
    <string name="update_at">Update_at</string>
    <string name="update">Update</string>
    <string name="newPass">New Password</string>
    <string name="name">Divice name</string>
    <string name="see_more">See More</string>
    <string name="changelanguage">Change Lenguage</string>
    <string name="changepass">Change Password</string>
    <string name="logout">Logout</string>
    <string name="soLuong">Count</string>
    <string name="daDung">Tinhtrang</string>
    <string name="namSanXuat">Creat_date</string>
    <string name="ngayNhapKho">Ngày nhập</string>
    <string name="thoigianbaoduong">Thời gian bảo dưỡng</string>
    <string name="nhasanxuat">Nhà Sản Xuất</string>
    <string name="tongthietbi">Total Device</string>
    <string name="Deviceuse">Device use</string>
    <string name="devicerepair">Device repair</string>
    <string name="all">All</string>
    <string name="chuaBanGiao">Dont handed over</string>
    <string name="dangSuDung">Use</string>
    <string name="dangBaoHong">Report broken</string>
    <string name="dangSuaChua">Repair</string>
    <string name="ngungSuDung">Stop using</string>
    <string name="thanhLy">Liquidation</string>
    <string name="list">List</string>
    <string name="thoiGian">Time</string>
    <string name="nguoiThucHien">User</string>
    <string name="history">History of Device</string>
    <string name="tongvattu">Total Accessory</string>
    <string name="vattucon">Accessory use</string>
    <string name="vattucannhap">Accessory need</string>
    <string name="Notification">Notification</string>
    <string name="delete">Delete</string>
    <string name="AccessoryUser">Accessory User</string>
    <string name="Use">Use</string>
    <string name="inventory">Inventory</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Quanlythietbijyte">Medical Device Management</string>
    <string name="Quanly">Management</string>
    <string name="thietbijyte">Medical Device</string>
    <string name="status">Status</string>
    <string name="Time">Time</string>
    <string name="suseces">Suseces</string>
    <string name="Pending">Pending</string>
    <string name="uncounted">Uncounted</string>

    <string name="help">Help</string>
    <string name="chooselanguage">Do you choose?</string>
    <string name="aboutus">About Us</string>
    <string name="oke">Oke</string>
    <string name="language">Language</string>
    <string name="noInternet">No Internet</string>
    <string name="notifi">Please fill information enough?</string>
    <string name="title">Do you sure report broken device?</string>
    <string name="choosepermistion">Choose Permittion</string>
    <string name="fingerprint_dialog_notification">First time you need to login</string>
    <string name="imfordevice">Imformation Device</string>
    <string name="dangnhapvantay">Login By Fingerprint</string>
    <string name="title_activity_login_test">LoginActivity_test</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="messages">Message</string>
    <string name="categories">CAtegories</string>
    <string name="category1">Category10</string>
    <string name="category2">Category20</string>
    <string name="category3">Category30</string>
    <string name="Loginotheraccount">Login other account</string>
    <string name="xacthuc">Hãy Xác thực Danh tính</string>
    <string name="sendagain">send again</string>
    <string name="send">Send</string>
    <string name="titleOTP">OTP Authentication</string>
    <string name="listdevice">List Device</string>
    <string name="Reason">Reason</string>
    <string name="User">User</string>
    <string name="username">Name</string>
    <string name="wellcome">Wellcome</string>
    <string name="Ghichu">Note inventory</string>
    <string name="note_inventoy">Note</string>
    <string name="title_inventory">Bạn chắc chắn muốn kiểm kê thiết bị này</string>
    <string name="vi">Vi</string>
    <string name="En">En</string>
    <string name="hotline">Hotline : 0348978361</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>