<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardUseCompatPadding="true"
    android:elevation="5dp"
    app:cardCornerRadius="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:background="@drawable/custom_background_item_device">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutitemDevice"
            android:background="@drawable/custom_background_item_device"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/Imagedevice"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/thietbiyte">

            </ImageView>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textviewCardNameDevice"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="Máy theo dõi bệnh nhân"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginRight="6dp"
                        android:text="@string/unique_id"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <TextView
                        android:id="@+id/tv_dvID"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"
                        android:text="GM1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginRight="6dp"
                        android:text="@string/model"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <TextView
                        android:id="@+id/tv_model"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"
                        android:text="PMV2701"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginRight="6dp"
                        android:text="@string/serial"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <TextView
                        android:id="@+id/tv_serial"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"
                        android:text="11059"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_marginRight="6dp"
                        android:text="@string/tinhTrang"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <TextView
                        android:id="@+id/tv_tinh_trang"
                        android:textColor="@color/colorText"
                        android:textSize="12sp"
                        android:text="Mới"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>





</androidx.cardview.widget.CardView>